--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,8 @@ sonar.projectName=CodeStatusHTTP
 sonar.projectKey=CodeStatusHTTP
 
 sonar.sourceEncoding=UTF-8
-sonar.sources=./src
+sonar.sources=CodeStatusHTTP
+sonar.tests=CodeStatusHTTP.Tests
 
 sonar.scm.enabled=true
 sonar.scm.provider=git
