--- a/.github/workflows/sonar-scanner.yml
+++ b/.github/workflows/sonar-scanner.yml
@@ -1,12 +1,6 @@
 name: sonar-scanner
 
-on:
-  pull_request:
-    branches:
-    - master 
-  push: 
-    branches: 
-    - master
+on: [push, pull_request]
 
 jobs:
   SonarScanner:
@@ -26,7 +20,6 @@ jobs:
     - name: Run SonarQube on pull request
       if: github.event_name == 'pull_request'
       run: sonar-scanner
-        -X
         -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         -Dsonar.host.url=https://sonar.openbsl.ru
         -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
