--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
-sonar.projectName=CodeStatusHTTP
-sonar.projectKey=CodeStatusHTTP
+sonar.projectName=HTTPStatusCodes
+sonar.projectKey=HTTPStatusCodes
 
 sonar.sourceEncoding=UTF-8
 
-sonar.sources=CodeStatusHTTP
-sonar.tests=CodeStatusHTTP.Tests
+sonar.sources=HTTPStatusCodes
+sonar.exclusions=HTTPStatusCodes.Tests/*
 
 sonar.scm.enabled=true
 sonar.scm.provider=git
 
-sonar.bsl.languageserver.diagnosticLanguage=ru
+sonar.bsl.languageserver.diagnosticLanguage=en
